--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 30
@@ -37,10 +39,21 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
     implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation 'com.github.yalantis:ucrop:2.2.5'
+    //glide(사진 붙이기)라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    apply plugin: 'kotlin-kapt'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+    //noinspection GradleDependency
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 }
