--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'com.google.gms.google-services'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'realm-android'
+
 
 android {
     compileSdkVersion 30
@@ -31,7 +33,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
@@ -50,10 +52,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     apply plugin: 'kotlin-kapt'
-    kapt "android.arch.lifecycle:compiler:1.1.1"
+    //noinspection LifecycleAnnotationProcessorWithJava8
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
     //noinspection GradleDependency
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    implementation 'io.realm:android-adapters:3.1.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
